fix: test 시 jvm options 추가