@@ -34,7 +34,9 @@ test {
     jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
-
+tasks.withType(Test) {
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED'
+}
 
 jar {
     archiveFileName = 'oopt.jar'
